echoes added, kyla name added, bio updated

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     <!-- Header Section -->
     <header>
-        <h1>Welcome to My Gamer Portfolio</h1>
+        <h1>Kyla Driscoll</h1>
         <nav>
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
@@ -218,7 +218,7 @@
     <div class="portfolio-section" id="about">
         <h2>About Me</h2>
         <p>
-            I'm a passionate gamer and game designer with experience in creating immersive narratives and engaging gameplay. I specialize in game design, storytelling, and content creation. My focus is on building worlds that capture the imagination and draw players into unique experiences.
+            Hi, I'm Kyla! I am a passionate narrative designer with experience in creating immersive narratives and engaging gameplay. I specialize in narrative design, storytelling, and social media content creation.
         </p>
     </div>
 
@@ -233,7 +233,7 @@
 
             <!-- Narrative Project Details -->
             <details>
-                <summary>Game Story 1: Adventure in a fantasy world</summary>
+                <summary>Echoes of the Salt Flats: Tabletop Role-playing Game (TTRPG)</summary>
                 <p>This narrative explores a high-fantasy adventure where players journey through magical lands, encountering mythical creatures and solving ancient mysteries.</p>
             </details>
 
