--- a/index.html
+++ b/index.html
@@ -235,6 +235,16 @@
             <a href="K.Driscoll_Resume.pdf" class="resume-link" target="_blank">Download My Resume</a>
         </div>
     </div>
+
+    <!-- Contact Information Section -->
+    <div class="contact-info">
+        <p>If you’d like to get in touch, feel free to reach out via email or connect with me on social media!</p>
+        <p><strong>Email:</strong> kyla@email.com</p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kyla" target="_blank" style="color: #D6A3E1;">linkedin.com/in/kyla</a></p>
+        <p><strong>Twitter:</strong> <a href="https://twitter.com/kyla" target="_blank" style="color: #D6A3E1;">@kyla</a></p>
+    </div>
+</section>
+
 </section>
 
     <!-- Portfolio Section -->
