yay almost done

--- a/index.html
+++ b/index.html
@@ -231,17 +231,17 @@
 
         <!-- About My Journey Text -->
         <div class="bio-text">
-            <p><strong>About my journey:</strong> Ever since I was a young girl, I have enjoyed gaming. Growing up, my family would play tabletop games with our meals, teaching us kids how to problem solve and critically think. However, my passion for gaming did not stop there. As I grew older, my father and I would create board games together, creating unique game mechanics based off of our most beloved games.</p>
-            <a href="K.Driscoll_Resume.pdf" class="resume-link" target="_blank">Download My Resume</a>
+            <p><strong>About my journey:</strong> Ever since I was a young girl, I have enjoyed gaming. Growing up, my family would play tabletop games with our meals, teaching us kids critical thinking skills from an early age. However, my passion for gaming did not stop there. As I grew older, my father and I would create board games together, creating unique game mechanics based off of our most beloved games.</p>
         </div>
     </div>
 
     <!-- Contact Information Section -->
     <div class="contact-info">
-        <p>If you’d like to get in touch, feel free to reach out via email or connect with me on social media!</p>
-        <p><strong>Email:</strong> kyla@email.com</p>
+        <p>If you would like to get in touch, feel free to reach out via email or connect with me on LinkedIn!</p>
+        <p><strong>Email:</strong> kylacdriscoll@gmail.com</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kyla" target="_blank" style="color: #D6A3E1;">linkedin.com/in/kyla</a></p>
-        <p><strong>Twitter:</strong> <a href="https://twitter.com/kyla" target="_blank" style="color: #D6A3E1;">@kyla</a></p>
+        <a href="K.Driscoll_Resume.pdf" class="resume-link" target="_blank">Download My Resume</a>
+
     </div>
 </section>
 
@@ -258,7 +258,7 @@
 
             <!-- Narrative Project Details -->
             <details>
-                <summary>Game Story 1: Adventure in a fantasy world</summary>
+                <summary>Echoes of the Salt Flats: TTRPG </summary>
                 <p>This narrative explores a high-fantasy adventure where players journey through magical lands, encountering mythical creatures and solving ancient mysteries.</p>
             </details>
 
