--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <p>If you would like to get in touch, feel free to reach out via email or connect with me on LinkedIn!</p>
         <p><strong>Email:</strong> kylacdriscoll@gmail.com</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kyla" target="_blank" style="color: #D6A3E1;">linkedin.com/in/kyla</a></p>
-        <a href="K.Driscoll_Resume.pdf" class="resume-link" target="_blank">Download My Resume</a>
+        <a href="path_to_resume.pdf" class="resume-link">Download Resume</a>
 
     </div>
 </section>
