--- a/index.html
+++ b/index.html
@@ -216,7 +216,6 @@
         <nav>
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -224,7 +223,8 @@
 <section id="about">
     <h2>About Me</h2>
     <p>Thanks for stopping by! My name is Kyla, and I am a passionate Narrative Designer!</p>
-    <p>In my free time, I am a mentor and alumni of FIRST Robotics Competitions, who volunteers as a judge at competitions.</p>
+    <p>In my free time, I am a mentor and alumni of FIRST. 
+    <p>At local FIRST LEGO League(FLL) and FIRST Robotics Competitions(FRC), you can often find me in the judge's room, providing feedback to young engineers.</p>
     <div class="bio-container">
         <!-- Bio Image -->
         <img src="478821730_1794211681122386_8328149616478346293_n.jpg" alt="Your Bio Picture">
