--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             padding: 20px;
             position: sticky;
             top: 0;
-            z-index: 1000;  /* Ensures the header stays on top of other content */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);  /* Optional shadow for visual depth */
+            z-index: 1000;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
@@ -76,10 +76,11 @@
         }
 
         #about .bio-container img {
-            border-radius: 50%;
-            width: 200px;
-            height: 200px;
+            width: 200px;  /* Slightly larger bio picture */
+            height: auto;
             object-fit: cover;
+            border-radius: 10px;
+            margin-right: 20px;
         }
 
         #about .bio-container .bio-text {
@@ -209,6 +210,41 @@
             margin-top: 50px;
         }
 
+        /* Styling for Project Dropdown */
+        .project-dropdown {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            justify-content: center;  /* Centered dropdown */
+            text-align: left;
+        }
+
+        .project-dropdown img {
+            width: 250px;  /* Larger image for dropdown */
+            height: auto;
+            border-radius: 10px;
+            object-fit: cover;
+        }
+
+        .project-dropdown .project-text {
+            max-width: 600px;
+            text-align: left;
+        }
+
+        .download-link {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background-color: #5C4B8B;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.1rem;
+        }
+
+        .download-link:hover {
+            background-color: #D6A3E1;
+        }
     </style>
 </head>
 <body>
@@ -254,69 +290,45 @@
             <h3>Narrative Projects</h3>
             <p>This section showcases my work involving storytelling, game design, and narrative mechanics.</p>
 
-            <!-- Narrative Project Details -->
+            <!-- Echoes of the Salt Flats Project -->
             <details>
-                <summary>Echoes of the Salt Flats: TTRPG </summary>
-                <p>This narrative explores a high-fantasy adventure where players journey through magical lands, encountering mythical creatures and solving ancient mysteries.</p>
-            </details>
+                <summary>Echoes of the Salt Flats: TTRPG</summary>
+                <p></p>
 
-            <details>
-                <summary>Game Story 2: Sci-fi RPG narrative</summary>
-                <p>A futuristic, science-fiction story involving space exploration, diplomacy, and intergalactic conflicts. Players make decisions that affect the fate of entire civilizations.</p>
-            </details>
+                <!-- Project Dropdown with Image and Text -->
+                <div class="project-dropdown">
+                    <!-- Image on the left -->
+                    <img src="LOGO_Noname.png" alt="Echoes of the Salt Flats" style="max-height: 300px;">
+                    
+                    <!-- Text on the right -->
+                    <div class="project-text">
+                        <p>Fluxians have been living peacefully with their Terror Birds for years. But when Terror Birds suddenly start passing away on the borders of the salt flats, it is up to the crew to figure out why - and how to stop their sacred companions from being killed.</p>
+                    </div>
+                </div>
 
-            <details>
-                <summary>Game Story 3: Horror survival writing</summary>
-                <p>This dark narrative immerses players in a post-apocalyptic world where they must survive against terrifying creatures and unravel a chilling mystery.</p>
+                <!-- Download Link -->
+                <a href="path_to_echoes_of_the_salt_flats.pdf" class="download-link" target="_blank">Download Echoes of the Salt Flats Here</a>
             </details>
         </div>
 
-        <!-- Marketing Subsection with Instagram Carousel -->
-        <div class="project-subsection" id="marketing">
-            <h3>Marketing Projects</h3>
-            <p>This section highlights my work in marketing, including social media campaigns and visual content creation.</p>
-
-            <!-- Instagram Carousel -->
-            <div class="carousel-container">
-                <div class="carousel-item">
-                    <blockquote class="instagram-media instagram-embed" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/DF_QlwrpTOY/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14">
-                        <div style="padding:16px;">
-                            <a href="https://www.instagram.com/p/DF_QlwrpTOY/?utm_source=ig_embed&amp;utm_campaign=loading" style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
-                                <!-- Instagram content -->
-                            </a>
-                        </div>
-                    </blockquote>
-                    <script async src="//www.instagram.com/embed.js"></script>
-                </div>
-                
-                <div class="carousel-item">
-                    <blockquote class="instagram-media instagram-embed" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/DFqyl8qprJz/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14">
-                        <div style="padding:16px;">
-                            <a href="https://www.instagram.com/p/DFqyl8qprJz/?utm_source=ig_embed&amp;utm_campaign=loading" style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
-                                <!-- Instagram content -->
-                            </a>
-                        </div>
-                    </blockquote>
-                    <script async src="//www.instagram.com/embed.js"></script>
-                </div>
-
-                <div class="carousel-item">
-                    <blockquote class="instagram-media instagram-embed" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/DHligshO4uQ/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14">
-                        <div style="padding:16px;">
-                            <a href="https://www.instagram.com/p/DHligshO4uQ/?utm_source=ig_embed&amp;utm_campaign=loading" style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
-                                <!-- Instagram content -->
-                            </a>
-                        </div>
-                    </blockquote>
-                    <script async src="//www.instagram.com/embed.js"></script>
-                </div>
+        <!-- Instagram Carousel -->
+        <div class="carousel-container">
+            <div class="carousel-item">
+                <img src="instagram_image_1.jpg" alt="Instagram Post 1">
+            </div>
+            <div class="carousel-item">
+                <img src="instagram_image_2.jpg" alt="Instagram Post 2">
+            </div>
+            <div class="carousel-item">
+                <img src="instagram_image_3.jpg" alt="Instagram Post 3">
             </div>
         </div>
+
     </div>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>© 2025 Kyla Driscoll | All Rights Reserved</p>
     </footer>
 
 </body>
