--- a/index.html
+++ b/index.html
@@ -292,44 +292,42 @@
 
             <!-- Echoes of the Salt Flats Project -->
             <details>
-                <summary>Echoes of the Salt Flats: TTRPG</summary>
-                <p></p>
+                <summary>Echoes of the Salt Flats</summary>
+                <p>Description of the game concept...</p>
+                <a href="#" class="download-link">Download Project</a>
+            </details>
+            <!-- Project Dropdown for Echoes of the Salt Flats -->
+             
+<div class="project-dropdown">
+    <img src="path/to/your/image.jpg" alt="Echoes of the Salt Flats" class="project-image">
+    <div class="project-text">
+        <h4>Echoes of the Salt Flats</h4>
+        <p>This is the description or caption for Echoes of the Salt Flats. It provides context about the project and its significance in your portfolio.</p>
+    </div>
+</div>
 
-                <!-- Project Dropdown with Image and Text -->
-                <div class="project-dropdown">
-                    <!-- Image on the left -->
-                    <img src="LOGO_Noname.png" alt="Echoes of the Salt Flats" style="max-height: 300px;">
-                    
-                    <!-- Text on the right -->
-                    <div class="project-text">
-                        <p>Fluxians have been living peacefully with their Terror Birds for years. But when Terror Birds suddenly start passing away on the borders of the salt flats, it is up to the crew to figure out why - and how to stop their sacred companions from being killed.</p>
-                    </div>
-                </div>
 
-                <!-- Download Link -->
-                <a href="path_to_echoes_of_the_salt_flats.pdf" class="download-link" target="_blank">Download Echoes of the Salt Flats Here</a>
+            <!-- Exile in the Mechnoir Desert Project -->
+            <details>
+                <summary>Exile in the Mechnoir Desert</summary>
+                <p>Description of the game concept...</p>
+                <a href="#" class="download-link">Download Project</a>
             </details>
         </div>
 
-        <!-- Instagram Carousel -->
-        <div class="carousel-container">
-            <div class="carousel-item">
-                <img src="instagram_image_1.jpg" alt="Instagram Post 1">
-            </div>
-            <div class="carousel-item">
-                <img src="instagram_image_2.jpg" alt="Instagram Post 2">
-            </div>
-            <div class="carousel-item">
-                <img src="instagram_image_3.jpg" alt="Instagram Post 3">
-            </div>
-        </div>
+    <!-- Marketing Projects Section -->
+<div class="project-subsection">
+    <h3>Marketing Projects</h3>
+    <p><a href="https://www.instagram.com/studioberto/" target="_blank">Studio Berto on Instagram</a></p>
 
-    </div>
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2025 Kyla Driscoll | All Rights Reserved</p>
+        <p>&copy; 2025 Kyla Driscoll | All rights reserved</p>
     </footer>
+
+    <!-- Instagram Embed Scripts -->
+    <script async src="//www.instagram.com/embed.js"></script>
 
 </body>
 </html>
